--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                     <img class="tube-third" src="assets/images/gifs/tube.gif" alt="tube" />
                 </div>
                 <div class="derp-text">
-                    <h1>THE NEW DERP</h1>
-                    <h2>GENESIS - DERP CELLS NEW ORGANISM FOUND. ORIGIN UNKNOWN.</h2>
-                    <p>Seems to strive under the toughest of environment. Potential Humanoid Traits Found. + Human ?</p>
+                    <h1>??????????</h1>
+                    <h2>????????? ???????? ??????????</h2>
+                    <p>?????????????derp?????????????? <br>?????????????derp?????????????? <br/>?????????????derp?????????????? </p>
                     <button id="derpBtn" class="btn btn-next btn-white">NEXT</button>
                 </div>
             </div>
@@ -162,8 +162,9 @@
         <!-- Embrace Section -->
         <section class="embrace-section" style="background-image: url(assets/images/png/black-lines.png);">
             <div class="embrace-header">
-                <!-- <video preload="auto" id="embraceVideo" src="assets/videos/embrace.webm"></video> -->
-                <video id="embraceVideo">
+                <!-- <video preload="auto" autoplay muted playsinline id="embraceVideo" src="assets/videos/embrace.mp4"></video> -->
+                <video id="embraceVideo" poster="assets/images/gifs/embrace.gif" loop>
+                    <source src="assets/videos/embrace.mp4" type="video/mp4">
                     <source src="assets/videos/embrace.webm" type="video/webm">
                     Your browser does not support the video tag.
                   </video>
