--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+
+    <!-- Loader Block -->
+    <div id="loader" class="loader-section">
+        <img src="assets/images/gifs/loading.gif" width="300" height="300" alt="loading" />
+        <button id="enterWebsite" class="btn btn-next btn-white" style="display: none;">Enter</button>
+    </div>
+
     <!-- Header Section -->
     <header class="header-section">
         <div class="container">
@@ -309,6 +316,10 @@
 
     <!-- JQuery  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- Web Audio -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!-- CarouselTicker JS -->
     <script type="text/javascript" src="assets/js/vendor/jquery.carouselTicker.js"></script>
 
