--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="base-content">
                         <img src="assets/images/logo-xl.png" width="593" height="323" alt="logo" />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore </p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore </p> -->
                         <h6>DRAG DOWN TO PLAY STORY</h6>
                         <div class="base-mouse">
                             <img src="assets/images/svg/mouse.svg" alt="mouse" />
@@ -303,7 +303,6 @@
             </div>
             <div class="cockpit-back">CLICK THE MONITOR TO GO BACK</div>
         </div>
-
 
     </main>
 
