--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DERP NFT</title>
-    <link rel="shortcut icon" href="./favicon.svg" />
+    <link rel="shortcut icon" href="./assets/favicon.png" />
     <!-- Bundle CSS -->
     <link rel="stylesheet" href="dist/style.min.css" />
 </head>
@@ -24,7 +24,7 @@
         <div class="container">
             <div id="toggleNav" class="header-block">
                 <a href="index.html" class="header-logo">
-                    <img src="assets/images/logo.png" width="224" height="53" alt="logo" />
+                    <img src="assets/images/logo.png" width="198" height="47" alt="logo" />
                 </a>
                 <button id="toggleBtn" type="button" class="toggler">
                     <span></span>
@@ -32,9 +32,9 @@
                 <div class="menu-wrapper">
                     <div class="header-wrapper">
                         <div class="header-links">
-                            <a href="javascript:;" class="btn btn-md btn-primary">EMBRACE <span>THE DERP</span> </a>
+                            <a id="embraceVideoBtn" href="javascript:;" class="btn btn-md btn-primary">EMBRACE <span>THE DERP</span> </a>
                             <a href="javascript:;" class="btn btn-md btn-twitter"><img src="assets/images/twitter.png" width="25" height="23" alt="twitter" /><span>FOLLOW TWITTER</span></a>
-                            <a href="javascript:;" class="btn btn-md btn-discord"><img src="assets/images/discord.png" width="25" height="22" alt="discord" /><span>JOIN OUR DISCORD</span></a>
+                            <a href="javascript:;" class="btn btn-md btn-telegram"><img src="assets/images/png/telegram-icon.png" width="25" height="22" alt="telegram" /><span>JOIN OUR TELEGRAM</span></a>
                         </div>
                     </div>
                 </div>
@@ -127,44 +127,6 @@
 
         </section>
 
-        <!-- Hope Section -->
-        <section class="hope-section">
-            <div class="hope-block">
-                <div class="hope-card">
-                    <div class="hope-text">
-                        <h1>THE NEW HOPE</h1>
-                        <h2>GENESIS - DERP CELLS NEW ORGANISM FOUND. ORIGIN UNKNOWN.</h2>
-                        <p>Seems to strive under the toughest of environment. Potential Humanoid Traits Found. + Human ?</p>
-                        <button id="hopeBtn" class="btn btn-next btn-gray">NEXT</button>
-                    </div>
-                </div>
-                <div class="hope-cells">
-                    <img class="cell-first" src="assets/images/gifs/cell.gif" alt="cell" />
-                    <img class="cell-second" src="assets/images/gifs/cell.gif" alt="cell" />
-                    <img class="cell-third" src="assets/images/gifs/cell.gif" alt="cell" />
-                </div>
-            </div>
-            <div class="soft-pink">
-                <img src="assets/images/png/softpink.png" alt="soft-pink" />
-            </div>
-        </section>
-
-        <!-- Derp Section -->
-        <section class="derp-section" style="background-image: url(assets/images/gifs/base-bg.gif);">
-            <div class="derp-block">
-                <div class="derp-tubes">
-                    <img class="tube-first" src="assets/images/gifs/tube.gif" alt="tube" />
-                    <img class="tube-second" src="assets/images/gifs/tube.gif" alt="tube" />
-                    <img class="tube-third" src="assets/images/gifs/tube.gif" alt="tube" />
-                </div>
-                <div class="derp-text">
-                    <h1>??????????</h1>
-                    <h2>????????? ???????? ??????????</h2>
-                    <p>?????????????derp?????????????? <br>?????????????derp?????????????? <br/>?????????????derp?????????????? </p>
-                    <button id="derpBtn" class="btn btn-next btn-white">NEXT</button>
-                </div>
-            </div>
-        </section>
 
         <!-- Embrace Section -->
         <section class="embrace-section" style="background-image: url(assets/images/png/black-lines.png);">
@@ -185,7 +147,7 @@
                 <div class="cockpit-back">CLICK THE MONITOR TO GO BACK</div>
             </div>
 
-            <div class="embrace-text">CHOOSE YOUR DERP</div>
+            <div class="embrace-text">REDACTED</div>
             <div class="embrace-derp" style="background-image: url(assets/images/png/bg-pink-2.png);">
                 <div id="embraceCarousel">
                     <ul class="embrace-carousel">
@@ -193,93 +155,102 @@
                             <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
-                            <img src="assets/images/png/derp-2.png" alt="derp" />
-                        </li>
-                        <li>
-                            <img src="assets/images/png/derp-3.gif" alt="derp" />
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
                             <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
-                            <img src="assets/images/png/derp-2.png" alt="derp" />
-                        </li>
-                        <li>
-                            <img src="assets/images/png/derp-3.gif" alt="derp" />
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
                             <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
-                            <img src="assets/images/png/derp-2.png" alt="derp" />
-                        </li>
-                        <li>
-                            <img src="assets/images/png/derp-3.gif" alt="derp" />
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
                             <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
-                            <img src="assets/images/png/derp-2.png" alt="derp" />
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                         <li>
-                            <img src="assets/images/png/derp-3.gif" alt="derp" />
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
+                        </li>
+                        <li>
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
+                        </li>
+                        <li>
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
+                        </li>
+                        <li>
+                            <img src="assets/images/png/derp-1.png" alt="derp" />
                         </li>
                     </ul>
                 </div>
             </div>
 
-            <div class="embrace-member">
-                <div class="embrace-member-list">
-                    <div class="embrace-member-text">MEET THE TEAM</div>
-                    <div class="member-item">
-                        <div class="member-top">
-                            <img src="assets/images/png/derp-gold.png" width="239" height="188" alt="gold" />
-                        </div>
-                        <div class="member-bottom">
-                            <h2>@AXEL_6 (CEO)</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetu</p>
-                        </div>
-                    </div>
-                    <div class="member-item">
-                        <div class="member-top">
-                            <img src="assets/images/png/derp-fish.png" width="265" height="188" alt="fish" />
-                        </div>
-                        <div class="member-bottom">
-                            <h2>@0xZENITH (TECH)</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetu</p>
+            <div class="embrace-tokenomics">
+                <div class="tokenmics-block">
+                    <h3>TOKENOMICS</h3>
+                    <div class="tokenmics-top">
+                        <ul>
+                            <li><span class="green"></span>Presale: 32B</li>
+                            <li><span class="yellow"></span>Liquidity : 25B</li>
+                            <li><span class="red"></span>Burnt: 9B</li>
+                            <li><span class="cyan"></span>Team: 2B</li>
+                            <li><span class="indigo"></span>Airdrop: 1B</li>
+                        </ul>
+                        <div class="image">
+                            <img width="893" src="assets/images/png/piechart.png" alt="chart"/>
                         </div>
                     </div>
-                    <div class="member-item">
-                        <div class="member-top">
-                            <img src="assets/images/png/derp-nude.png" width="284" height="188" alt="nude" />
+                    <div class="tokenmics-bottom">
+                        <div class="tokenmics-item">
+                            <h5>Presale Whitelist</h5>
+                            <ul>
+                                <li>1hr / sold out</li>
+                                <li>Minimum allocation: 0.069 ETH</li>
+                                <li>Maximum allocation: 0.69 ETH</li>
+                                <li>Public: Leftover after presale end</li>
+                            </ul>
                         </div>
-                        <div class="member-bottom">
-                            <h2>@CALIDEL (COMM)</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetu</p>
+                        <div>
+                            <div class="tokenmics-item">
+                                <h5>Presale Vesting</h5>
+                                <ul>
+                                    <li>58.6% released at launch</li>
+                                    <li>6.9% released every next day</li>
+                                </ul>
+                            </div>
+                            <div class="tokenmics-item">
+                                <h5>Liquidity Pool</h5>
+                                <ul>
+                                    <li>51% of presale ETH as liquidity</li>
+                                    <li>LP will be locked for 6 months</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                    <div class="member-item">
-                        <div class="member-top">
-                            <img src="assets/images/png/derp-ice.png" width="286" height="188" alt="ice" />
-                        </div>
-                        <div class="member-bottom">
-                            <h2>@HEIZNEB3RG (ARTIST)</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetu</p>
-                        </div>
+                    <div class="embrace-register">
+                        <h2>GET $DERPY WITH US AND WIN A PRESALE SPOT</h2>
+                        <a id="tweetButton" href="javascript:;" class="btn">
+                            <img width="570" src="assets/images/gifs/registerbutton.gif" alt="button" />
+                        </a>
                     </div>
                 </div>
             </div>
+
             <div class="embrace-footer">
                 <div class="logo">
-                    <img src="assets/images/png/logo-xl.png" width="586" height="120" alt="logo" />
-                </div>
-                <h4>STAY TUNED</h4>
-                <div class="buttons">
-                    <a href="javascript:;" class="btn btn-xl btn-twitter"><img src="assets/images/png/twitter-xl.png" width="44" height="40" alt="twitter" /><span>FOLLOW TWITTER</span></a>
-                    <a href="javascript:;" class="btn btn-xl btn-discord"><img src="assets/images/png/discord-xl.png" width="44" height="38" alt="discord" /><span>JOIN OUR DISCORD</span></a>
+                    <img src="assets/images/logo-xl.png" width="660" alt="logo" />
                 </div>
                 <h5>FOLLOW OUR SOCIAL <br> FOR MORE UPDATES</h5>
+                <div class="buttons">
+                    <a href="javascript:;" class="btn btn-xl btn-twitter"><img src="assets/images/png/twitter-xl.png" width="44" height="40" alt="twitter" /><span>FOLLOW TWITTER</span></a>
+                    <a href="javascript:;" class="btn btn-xl btn-telegram"><img src="assets/images/png/telegram-icon.png" width="44" height="38" alt="telegram" /><span>JOIN OUR TELEGRAM</span></a>
+                </div>
             </div>
             <div class="embrace-copyright">
                 COPYRIGHT (C) DERP:GENES 2024
